--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
-rabbit.interval=10
+rabbit.interval=5
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://127.0.0.1:5432/grabber
+db.username=postgres
+db.password=postgres
